--- a/donate/long.html
+++ b/donate/long.html
@@ -8,18 +8,18 @@
 		<link href="../_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.2cc46256.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.a098e3c9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.feb421d5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.8dd4af55.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.9f5c11a2.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.057f577c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.5936bdd4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.e4169b0d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.b6cf6c39.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.1c972f40.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.cbb61b64.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.934fb75f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.8eca5cf2.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.011be78a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/link.19b25350.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/link.c7d5d64f.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
 	<body>
 		<div>
@@ -28,10 +28,10 @@
 <div class="grid-container svelte-1v7zjnh"><div class="main-content svelte-1v7zjnh">
 <h1 class="svelte-1s5foe9">Регулярное пожертвование</h1>
 
-<ul><li><a href="https://www.patreon.com/spblpr" class=" svelte-nd5pfo" target="_blank">Patreon
+<ul><li><a href="https://www.patreon.com/spblpr" class=" svelte-nd5pfo" target="_blank" rel="">Patreon
 			
 </a>
-		</li><li><a href="https://boosty.to/spblpr" class=" svelte-nd5pfo" target="_blank">Boosty
+		</li><li><a href="https://boosty.to/spblpr" class=" svelte-nd5pfo" target="_blank" rel="">Boosty
 			
 </a>
 		</li>
@@ -50,7 +50,7 @@
 			
 			<script>
 				{
-					__sveltekit_do4hek = {
+					__sveltekit_2doswo = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -59,10 +59,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.2cc46256.js"),
-						import("../_app/immutable/entry/app.9f5c11a2.js")
+						import("../_app/immutable/entry/start.a098e3c9.js"),
+						import("../_app/immutable/entry/app.5936bdd4.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_do4hek.element, {
+						kit.start(app, __sveltekit_2doswo.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
