--- a/donate/sber.html
+++ b/donate/sber.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.28c1e6e5.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.2cc46256.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.a098e3c9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.feb421d5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.8dd4af55.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.9f5c11a2.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.057f577c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.5936bdd4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.e4169b0d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.b6cf6c39.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.1c972f40.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.934fb75f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.8eca5cf2.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.3c8cf867.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.ca2e8e7b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.4e25ef50.js">
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_do4hek = {
+					__sveltekit_2doswo = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -56,10 +56,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.2cc46256.js"),
-						import("../_app/immutable/entry/app.9f5c11a2.js")
+						import("../_app/immutable/entry/start.a098e3c9.js"),
+						import("../_app/immutable/entry/app.5936bdd4.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_do4hek.element, {
+						kit.start(app, __sveltekit_2doswo.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
